[CHORE] Minor changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 readme.txt
 /!*
+*.sh
+diff_*
 
 ######################################################################################
 #					Editors:
