minor changes of .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ readme.txt
 /!*
 *.sh
 diff_*
+/diffs
 
 ######################################################################################
 #					Editors:
