--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 readme.txt
-
-
-
+/!*
+*.sh
+diff_*
+/diffs
 
 ######################################################################################
 #					Editors:
